Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/staff/admin_doctor.xhtml
+++ b/src/main/webapp/admin/staff/admin_doctor.xhtml
@@ -37,69 +37,65 @@
                                         />
                                 </h:panelGrid>
 
-                                <h:panelGrid id="gpSelectText" class="w-100">
 
-
-                                    <p:selectOneListbox  class="w-100" filterMatchMode="contains" scrollHeight="500" id="lstSelect" value="#{doctorController.current}" filter="true" style="min-width: 400px;">
-                                        <f:selectItems  value="#{doctorController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
-                                        <f:ajax render="gpDetail" execute="lstSelect" />                                        
-                                    </p:selectOneListbox>
-                                </h:panelGrid>
+                                <p:selectOneListbox  
+                                    class="w-100" 
+                                    filterMatchMode="contains" 
+                                    scrollHeight="500" 
+                                    id="lstSelect" 
+                                    value="#{doctorController.current}" 
+                                    filter="true" >
+                                    <f:selectItems  value="#{doctorController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.person.nameWithTitle}"  ></f:selectItems>
+                                    <p:ajax update="gpDetail" process="lstSelect" />                                        
+                                </p:selectOneListbox>
 
 
 
                             </h:panelGrid  >
                         </div>
                         <div class="col-6">
-                            <p:panel>
-                                <div class="row w-100">
-                                    <h:panelGrid id="gpDetailText" columns="2" class="w-100">
-                                        <h:outputText  value="Title" />
-                                        <p:selectOneMenu value="#{doctorController.current.person.title}">
-                                            <f:selectItem itemLabel="Please select a title"/>
-                                            <f:selectItems value="#{doctorController.title}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />
-                                        </p:selectOneMenu>
-                                        
-                                        <h:outputText  value="Name" />
-                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.name}" class="w-100" />
-                                        <h:outputText  value="Phone" />
-                                        <p:inputText  value="#{doctorController.current.person.phone}" class="w-100" />
-                                        <h:outputText  value="Fax" />
-                                        <p:inputText autocomplete="off"  value="#{doctorController.current.person.fax}"  class="w-100"/>
-                                        <h:outputText  value="Mobile" />
-                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.mobile}" class="w-100" />
-                                        <h:outputText  value="Address" />
-                                        <p:inputText autocomplete="off" value="#{doctorController.current.person.address}" class="w-100" />
-                                        <h:outputText  value="Code" />
-                                        <p:inputText autocomplete="off" value="#{doctorController.current.code}" class="w-100" />
-                                        <h:outputText value="Speciality" />
-                                        <h:selectOneListbox size="1" value="#{doctorController.current.speciality}" class="w-100">
-                                            <f:selectItem itemLabel="Please select a speciality"/>
-                                            <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
-                                        </h:selectOneListbox>
-                                        <h:outputText value="Registration" />
-                                        <p:inputText autocomplete="off" value="#{doctorController.current.registration}" class="w-100"/>
-                                        <h:outputText value="Qualification" />
-                                        <p:inputText autocomplete="off"  value="#{doctorController.current.qualification}" class="w-100"/>
-                                        <h:outputText  value="Refering Charge" />
-                                        <p:inputText autocomplete="off"  value="#{doctorController.current.charge}"  class="w-100"/>
-                                        <h:outputText  value="Creater" />
-                                        <h:outputText  value="#{doctorController.current.creater.webUserPerson.name}" class="w-100"/>
-                                        <h:outputText  value="Created At" />
-                                        <h:outputText  value="#{doctorController.current.createdAt}" >
-                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  ></f:convertDateTime>
-                                        </h:outputText>
-                                    </h:panelGrid>
-                                </div>
-                                <h:panelGrid id="gpDetail">
-                                    <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <p:commandButton id="btnSave" value="Save" ajax="false"
-                                                         action="#{doctorController.saveSelected()}" styleClass="buttons"/>
+                            <h:panelGrid id="gpDetail" columns="2" class="w-100">
+                                <h:outputText  value="Title" />
+                                <p:selectOneMenu
+                                    filter="true"
+                                    value="#{doctorController.current.person.title}">
+                                    <f:selectItem itemLabel="Please select a title"/>
+                                    <f:selectItems value="#{doctorController.title}" var="t" itemLabel="#{t.label}" itemValue="#{t}" />
+                                </p:selectOneMenu>
 
-                                        <p:defaultCommand target="btnSave"/>
-                                    </h:panelGrid>
-                                </h:panelGrid>
-                            </p:panel>
+                                <h:outputText  value="Name" />
+                                <p:inputText autocomplete="off" value="#{doctorController.current.person.name}" class="w-100" />
+                                <h:outputText  value="Phone" />
+                                <p:inputText  value="#{doctorController.current.person.phone}" class="w-100" />
+                                <h:outputText  value="Fax" />
+                                <p:inputText autocomplete="off"  value="#{doctorController.current.person.fax}"  class="w-100"/>
+                                <h:outputText  value="Mobile" />
+                                <p:inputText autocomplete="off" value="#{doctorController.current.person.mobile}" class="w-100" />
+                                <h:outputText  value="Address" />
+                                <p:inputText autocomplete="off" value="#{doctorController.current.person.address}" class="w-100" />
+                                <h:outputText  value="Code" />
+                                <p:inputText autocomplete="off" value="#{doctorController.current.code}" class="w-100" />
+                                <h:outputText value="Speciality" />
+                                <p:selectOneMenu 
+                                    filter="true"
+                                    value="#{doctorController.current.speciality}" class="w-100">
+                                    <f:selectItem itemLabel="Please select a speciality"/>
+                                    <f:selectItems value="#{specialityController.items}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
+                                </p:selectOneMenu>
+                                <h:outputText value="Registration" />
+                                <p:inputText autocomplete="off" value="#{doctorController.current.registration}" class="w-100"/>
+                                <h:outputText value="Qualification" />
+                                <p:inputText autocomplete="off"  value="#{doctorController.current.qualification}" class="w-100"/>
+                            </h:panelGrid>
+                            <p:commandButton id="btnSave" 
+                                             value="Save" 
+                                             class="ui-button-warning w-25"
+                                             action="#{doctorController.saveSelected()}" 
+                                             process="btnSave gpDetail"
+                                             update="lstSelect"
+                                             />
+                            <p:defaultCommand target="btnSave"/>
+
                         </div>
                     </div>
                 </p:panel>
