--- a/src/main/webapp/developers/edit_bht.xhtml
+++ b/src/main/webapp/developers/edit_bht.xhtml
@@ -61,14 +61,14 @@
                             </p:panel>
                             <p:panel header="Hospital">
                                 <h:panelGrid columns="2">
-                                    <h:outputLabel value="Speciality"/>
+<!--                                    <h:outputLabel value="Speciality"/>
                                     <p:autoComplete forceSelection="true"
                                                     value="#{inwardStaffPaymentBillController.speciality}" id="acSpeciality"
                                                     completeMethod="#{specialityController.completeSpeciality}" 
                                                     var="mysp" itemLabel="#{mysp.name}" itemValue="#{mysp}"
                                                     >
                                         <f:ajax event="itemSelect" execute="@this" render="scStaff"/>
-                                    </p:autoComplete>
+                                    </p:autoComplete>-->
                                     <h:outputLabel  value="Select OPD Doctor" ></h:outputLabel>
                                     <p:autoComplete  style="width: 400px;" forceSelection="true" id="scStaff"
                                                      value="#{bhtEditController.current.opdDoctor}" 
@@ -76,12 +76,12 @@
                                                      var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
                                                      >
                                     </p:autoComplete>
-                                    <p:outputLabel value="Select Refering Doctor"/>                            
+<!--                                    <p:outputLabel value="Select Refering Doctor"/>                            
                                     <p:autoComplete forceSelection="true" value="#{bhtEditController.current.referringDoctor}"
                                                     completeMethod="#{inwardStaffPaymentBillController.completeStaff}" var="ix" 
                                                     itemLabel="#{ix.person.name}" itemValue="#{ix}" size="30"  
                                                     style="width: 400px;"  >
-                                    </p:autoComplete>
+                                    </p:autoComplete>-->
                                     <p:outputLabel value="Admission Type "/>
                                     <p:selectOneMenu value="#{bhtEditController.current.admissionType}" >
                                         <f:selectItem itemLabel="Select Admission Type"/>
