--- a/src/main/webapp/inward/inward_edit_bht.xhtml
+++ b/src/main/webapp/inward/inward_edit_bht.xhtml
@@ -97,7 +97,7 @@
 
                             <p:panel header="Hospital">
                                 <h:panelGrid columns="2" class="w-100">
-                                    <h:outputLabel value="OPD Doctor Speciality"/>
+<!--                                    <h:outputLabel value="OPD Doctor Speciality"/>
                                     <p:autoComplete forceSelection="true"
                                                     value="#{bhtEditController.speciality}" id="acSpeciality"
                                                     completeMethod="#{specialityController.completeSpeciality}" 
@@ -105,9 +105,9 @@
                                                     class="w-100 mx-2"
                                                     >
                                         <f:ajax event="itemSelect" execute="@this" render="somOpdDoc"/>
-                                    </p:autoComplete>
+                                    </p:autoComplete>-->
 
-                                    <h:outputLabel  value="Select OPD Doctor" ></h:outputLabel>
+<!--                                    <h:outputLabel  value="Select OPD Doctor" ></h:outputLabel>
                                     <p:selectOneMenu 
                                         id="somOpdDoc"
                                         value="#{bhtEditController.current.opdDoctor}" >
@@ -116,9 +116,10 @@
                                                        var="opddoc"
                                                        itemLabel="#{opddoc.person.nameWithTitle}"
                                                        itemValue="#{opddoc}"></f:selectItems>
-                                    </p:selectOneMenu>
+                                    </p:selectOneMenu>-->
                                     
-                                    <p:autoComplete  class="w-100 mx-2" forceSelection="true" id="scStaff"
+                                    <h:outputLabel  value="OPD Doctor" ></h:outputLabel>
+                                    <p:autoComplete  class="w-100 mx-2" forceSelection="true" id="refDoc"
                                                      value="#{bhtEditController.current.opdDoctor}" 
                                                      completeMethod="#{doctorController.completeDoctor}"
                                                      var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
@@ -141,6 +142,7 @@
                                                     itemLabel="#{ix.person.name}" itemValue="#{ix}"  
                                                     class="w-100 mx-2"  >
                                     </p:autoComplete>
+                                    
                                     <p:outputLabel value="Admission Type "/>
                                     <h:outputLabel class="mx-2" value="#{bhtEditController.current.admissionType.name}"/>                               
                                     <h:outputLabel value="Select  Admission Paymentmethod"/>
