--- a/src/main/webapp/inward/inward_timed_item_category.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_category.xhtml
@@ -19,26 +19,29 @@
                     <div class="row w-100">
                         <div class="col-6">
                             <h:panelGrid id="gpSelect" columns="1" class="w-100"  >
-
-                                <p:panel class="w-100">
-                                    <h:panelGrid id="gpSelectButtons" columns="3"  >
-                                        <p:commandButton id="btnAdd" value="Add" action="#{timedItemCategoryController.prepareAdd()}" class="" >
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail detailFocus" execute="" >
-                                            </f:ajax>
-                                        </p:commandButton>
-                                        <p:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                    return false;" action="#{timedItemCategoryController.delete()}"  value="Delete"  >
-                                        </p:commandButton>
-                                    </h:panelGrid>
-                                    <h:panelGrid id="gpSelectText" class="w-100" >
-                                        <p:selectOneListbox  id="lstSelect" value="#{timedItemCategoryController.current}" class="w-100">
-                                            <f:selectItems  value="#{timedItemCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                            <f:ajax render="gpDetail" execute="lstSelect" >
-                                            </f:ajax>
-                                        </p:selectOneListbox>
-                                    </h:panelGrid>
-
-                                </p:panel>
+                                <p:commandButton 
+                                    id="btnAdd" 
+                                    value="Add" 
+                                    action="#{timedItemCategoryController.prepareAdd()}" 
+                                    class="w-50" 
+                                    process="btnAdd"
+                                    update="lstSelect gpDetail"
+                                    >
+                                </p:commandButton>
+                                <p:commandButton 
+                                    id="btnDelete" 
+                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                                return false;" 
+                                    action="#{timedItemCategoryController.delete()}"  
+                                    value="Delete" 
+                                    process="btnDelete"
+                                    update="gpDetail lstSelect">
+                                </p:commandButton>
+                                <p:selectOneListbox  id="lstSelect" value="#{timedItemCategoryController.current}" class="w-100">
+                                    <f:selectItems  value="#{timedItemCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                    <f:ajax render="gpDetail" execute="lstSelect" >
+                                    </f:ajax>
+                                </p:selectOneListbox>
                             </h:panelGrid  >
                         </div>
                         <div class="col-6">
@@ -52,9 +55,12 @@
 
                                     </p:panelGrid>
                                     <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <p:commandButton id="btnSave" value="Save" action="#{timedItemCategoryController.saveSelected()}" >
-                                            <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail selectFocus"  execute="gpDetail" >
-                                            </f:ajax>
+                                        <p:commandButton 
+                                            id="btnSave" 
+                                            value="Save" 
+                                            action="#{timedItemCategoryController.saveSelected()}" 
+                                            process="btnSave gpDetail"
+                                            update="lstSelect">
                                         </p:commandButton>
                                         <p:defaultCommand target="btnSave"/>
 
