--- a/src/main/webapp/inward/inward_timed_item_category.xhtml
+++ b/src/main/webapp/inward/inward_timed_item_category.xhtml
@@ -13,60 +13,65 @@
         <h:panelGroup >
             <h:form  >
                 <p:growl/>
-                <p:focus id="selectFocus" context="gpSelect" />
+                <p:focus id="selectFocus" context="lstSelect" />
                 <p:focus id="detailFocus" context="gpDetail" />
                 <p:panel header="Manage Timed Item Category" >
                     <div class="row w-100">
                         <div class="col-6">
-                            <h:panelGrid id="gpSelect" columns="1" class="w-100"  >
-                                <p:commandButton 
-                                    id="btnAdd" 
-                                    value="Add" 
-                                    action="#{timedItemCategoryController.prepareAdd()}" 
-                                    class="w-50" 
-                                    process="btnAdd"
-                                    update="lstSelect gpDetail"
-                                    >
-                                </p:commandButton>
-                                <p:commandButton 
-                                    id="btnDelete" 
-                                    onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                return false;" 
-                                    action="#{timedItemCategoryController.delete()}"  
-                                    value="Delete" 
-                                    process="btnDelete"
-                                    update="gpDetail lstSelect">
-                                </p:commandButton>
-                                <p:selectOneListbox  id="lstSelect" value="#{timedItemCategoryController.current}" class="w-100">
-                                    <f:selectItems  value="#{timedItemCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
-                                    <f:ajax render="gpDetail" execute="lstSelect" >
-                                    </f:ajax>
-                                </p:selectOneListbox>
-                            </h:panelGrid  >
+
+                            <p:commandButton 
+                                id="btnAdd" 
+                                value="Add" 
+                                action="#{timedItemCategoryController.prepareAdd()}" 
+                                class="w-25 ui-button-success m-1" 
+                                process="btnAdd"
+                                update="lstSelect gpDetail"
+                                >
+                            </p:commandButton>
+                            <p:commandButton 
+                                id="btnDelete" 
+                                class="w-25 ui-button-danger m-1"
+                                onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                            return false;" 
+                                action="#{timedItemCategoryController.delete()}"  
+                                value="Delete" 
+                                process="btnDelete"
+                                update="gpDetail lstSelect">
+                            </p:commandButton>
+                            <p:selectOneListbox 
+                                filter="true"
+                                id="lstSelect" 
+                                value="#{timedItemCategoryController.current}" 
+                                class="w-100">
+                                <f:selectItems  value="#{timedItemCategoryController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <f:ajax render="gpDetail" execute="lstSelect" >
+                                </f:ajax>
+                            </p:selectOneListbox>
+
                         </div>
                         <div class="col-6">
-                            <p:panel>
-                                <h:panelGrid id="gpDetail" columns="1">
-                                    <p:panelGrid id="gpDetailText" columns="2">
-                                        <h:outputText id="lblName" value="Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtName" value="#{timedItemCategoryController.current.name}"  ></p:inputText>
-                                        <h:outputText id="lblDes" value="Income Name" ></h:outputText>
-                                        <p:inputText autocomplete="off" id="txtDes" value="#{timedItemCategoryController.current.description}"  ></p:inputText>
 
-                                    </p:panelGrid>
-                                    <h:panelGrid id="gpDetailButtons" columns="2">
-                                        <p:commandButton 
-                                            id="btnSave" 
-                                            value="Save" 
-                                            action="#{timedItemCategoryController.saveSelected()}" 
-                                            process="btnSave gpDetail"
-                                            update="lstSelect">
-                                        </p:commandButton>
-                                        <p:defaultCommand target="btnSave"/>
+                            <p:panelGrid id="gpDetail" columns="2" class="w-100">
 
-                                    </h:panelGrid>
-                                </h:panelGrid>
-                            </p:panel>
+                                <h:outputText id="lblName" value="Name" ></h:outputText>
+                                <p:inputText autocomplete="off" id="txtName" value="#{timedItemCategoryController.current.name}"  ></p:inputText>
+                                <h:outputText id="lblDes" value="Income Name" ></h:outputText>
+                                <p:inputText autocomplete="off" id="txtDes" value="#{timedItemCategoryController.current.description}"  ></p:inputText>
+
+                            </p:panelGrid>
+
+                            <p:commandButton 
+                                id="btnSave" 
+                                value="Save" 
+                                class="w-25 ui-button-warning m-1"
+                                action="#{timedItemCategoryController.saveSelected()}" 
+                                process="btnSave gpDetail"
+                                update="lstSelect">
+                            </p:commandButton>
+                            <p:defaultCommand target="btnSave"/>
+
+
+
                         </div>
                     </div>
 
