--- a/src/main/webapp/emr/patient_profile.xhtml
+++ b/src/main/webapp/emr/patient_profile.xhtml
@@ -414,36 +414,21 @@
                                                         <f:facet name="header">
                                                             <h:outputText value="BP" />
                                                         </f:facet>
-                                                        <h:outputText value="#{visit.sbp}" />
-                                                        <h:outputText value="/" />
-                                                        <h:outputText value="#{visit.dbp}" />
-                                                        <h:outputText value=" mmHg" />
+                                                        <h:outputText value="#{visit.bp}" />
                                                     </p:column>
                                                     <p:column sortBy="#{visit.bmi}" filterBy="#{visit.bmi}">
                                                         <f:facet name="header">
                                                             <h:outputText value="BMI" />
                                                         </f:facet>
-                                                        <h:outputText value="#{visit.bmi}" />
-                                                    </p:column>
-                                                    <p:column sortBy="#{visit.pr}" filterBy="#{visit.pr}">
-                                                        <f:facet name="header">
-                                                            <h:outputText value="PR" />
-                                                        </f:facet>
-                                                        <h:outputText value="#{visit.pr}" />
-                                                    </p:column>
-                                                    <p:column sortBy="#{visit.pr}" filterBy="#{visit.pr}">
-                                                        <f:facet name="header">
-                                                            <h:outputText value="PR" />
-                                                        </f:facet>
-                                                        <h:outputText value="#{visit.pr}" />
+                                                        <h:outputText value="#{visit.bmiFormatted}" />
                                                     </p:column>
                                                     <p:column >
                                                         <p:commandButton value="View" 
                                                                          ajax="false"
-                                                                         action="#{viewEncounterController.navigateToNewEncounter}" 
+                                                                         action="#{pastPatientEncounterController.navigateToViewPastEncounter()}" 
                                                                          onclick="this.form.target = '_blank'">
                                                             <f:setPropertyActionListener value="#{visit}" 
-                                                                                         target="#{viewEncounterController.encounter}" >
+                                                                                         target="#{pastPatientEncounterController.current}" >
                                                             </f:setPropertyActionListener>
                                                         </p:commandButton>
 
