--- a/src/main/webapp/inward/inward_administration.xhtml
+++ b/src/main/webapp/inward/inward_administration.xhtml
@@ -47,10 +47,10 @@
 
                                     <p:tab title="Price Matrix">
                                         <div class="d-grid gap-2">
-                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Service " class="w-100" action="inward_price_adjustment_service" ></p:commandButton>
-                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Investigation " class="w-100" action="inward_price_adjustment_investigation" ></p:commandButton>
-                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Pharmacy " class="w-100" action="inward_price_adjustment_pharmacy" ></p:commandButton>
-                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Store " class="w-100" action="inward_price_adjustment_store" ></p:commandButton>
+                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Service " class="w-100" action="/inward/inward_price_adjustment_service" actionListener="#{inwardPriceAdjustmntController.preparedAdd()}"></p:commandButton>
+                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Investigation " class="w-100" action="/inward/inward_price_adjustment_investigation" actionListener="#{inwardPriceAdjustmntController.preparedAdd()}"></p:commandButton>
+                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Pharmacy " class="w-100" action="/inward/inward_price_adjustment_pharmacy" actionListener="#{inwardPriceAdjustmntController.preparedAdd()}"></p:commandButton>
+                                            <p:commandButton ajax="false" value="Inward Price Adjustment - Store " class="w-100" action="/inward/inward_price_adjustment_store" actionListener="#{inwardPriceAdjustmntController.preparedAdd()}"></p:commandButton>
                                         </div>
                                     </p:tab>
 
