--- a/src/main/webapp/inward/inward_timed_item.xhtml
+++ b/src/main/webapp/inward/inward_timed_item.xhtml
@@ -16,54 +16,53 @@
                 <p:panel header="Manage Timed Item" >
                     <div class="row w-100">
                         <div class="col-4">
-                            <p:panel header="Search Timed Item" class="" >
-                                <h:panelGrid id="gpSelectButtons" columns="3"  >
 
-                                    <p:commandButton 
-                                        id="btnAdd"
-                                        value="Add"
-                                        action="#{timedItemController.prepareAdd()}"
-                                        process="btnAdd"
-                                        class="m-1 ui-button-success "
-                                        update="lstSelect gpDetail ">
-                                    </p:commandButton>
+                            <p:commandButton 
+                                id="btnAdd"
+                                value="Add"
+                                action="#{timedItemController.prepareAdd()}"
+                                process="btnAdd"
+                                update="lstSelect gpDetail "
+                                class="m-1 ui-button-success ">
 
-                                    <p:commandButton
-                                        id="btnDelete"
-                                        onclick="if (!confirm('Are you sure you want to delete this record?'))
+                            </p:commandButton>
+
+                            <p:commandButton
+                                id="btnDelete"
+                                process="btnDelete"
+                                update="lstSelect gpDetail"
+                                onclick="if (!confirm('Are you sure you want to delete this record?'))
                                                     return false;" action="#{timedItemController.delete()}" 
-                                        class="m-1 ui-button-danger"
-                                        value="Delete"  >
-                                    </p:commandButton>
+                                class="m-1 ui-button-danger"
+                                value="Delete"
+                                >
+                            </p:commandButton>
 
-                                </h:panelGrid>
 
 <!--                                    <p:inputText autocomplete="off" id="txtSearch" value="#{timedItemController.selectText}" >
         <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
     </p:inputText>-->
 
-                                <p:selectOneListbox 
-                                    id="lstSelect"
-                                    value="#{timedItemController.current}"
-                                    class="w-100"
-                                    filter="true">
-                                    <f:selectItems  value="#{timedItemController.selectedItems}"
-                                                    var="myItem" itemValue="#{myItem}"
-                                                    itemLabel="#{myItem.name}" >
-                                    </f:selectItems>
+                            <p:selectOneListbox 
+                                id="lstSelect"
+                                value="#{timedItemController.current}"
+                                class="w-100"
+                                filter="true">
+                                <f:selectItems  value="#{timedItemController.items}"
+                                                var="myItem" itemValue="#{myItem}"
+                                                itemLabel="#{myItem.name}" >
+                                </f:selectItems>
 
-                                    <f:ajax render="gpDetail" execute="lstSelect" >
-                                    </f:ajax>
-                                </p:selectOneListbox>
+                                <p:ajax update="gpDetail" process="lstSelect" >
+                                </p:ajax>
+                            </p:selectOneListbox>
 
-                            </p:panel>
                         </div>
+
                         <div class="col-8">
                             <p:panel header="Edit Details">
                                 <f:facet name="header" >
                                     <h:outputLabel value="Edit Details" ></h:outputLabel>
-
-
                                 </f:facet>
 
 
@@ -124,7 +123,7 @@
                                     <h:outputText value="Discount Allowed" ></h:outputText>
                                     <p:selectBooleanCheckbox value="#{timedItemController.current.discountAllowed}" itemLabel=""/>
 
-                                   
+                                    <f:facet name="footer" >
                                         <p:commandButton 
                                             style="float:left;" 
                                             id="btnSave" 
@@ -136,6 +135,8 @@
                                             update="lstSelect ">
                                         </p:commandButton>
                                         <p:defaultCommand target="btnSave"/>
+                                    </f:facet>
+
                                 </p:panelGrid>
                             </p:panel>
                         </div>
