--- a/src/main/webapp/resources/ezcomp/emr/patient_allergies.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/patient_allergies.xhtml
@@ -8,10 +8,14 @@
 
     <!-- INTERFACE -->
     <cc:interface>
+        <cc:attribute 
+            name="allergies"
+            />
 
         <cc:attribute 
-            name="allergies"   />
-
+            name="editable"
+            default="false"
+            />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -20,23 +24,25 @@
             id="tblAllergies"
             value="#{cc.attrs.allergies}"
             var="allergy"
-            styleClass="table table-striped"
             rowStyleClass="#{not empty allergy.stringValue ? 'table-danger' : ''}">
 
             <p:column headerText="Allergy Information">
-                <h:outputText value="#{allergy.itemValue.name}" style="font-weight:bold;"/>
+                <h:outputText value="#{allergy.itemValue.name}" styleClass="text-danger"/>
                 <h:outputText value="#{not empty allergy.stringValue ? ' - '.concat(allergy.stringValue) : ''}" />
-                <p:commandLink 
+                <p:spacer height="1" width="20" ></p:spacer>
+                <p:commandButton 
+                    icon="pi pi-times" 
+                    class="ml-5"
                     styleClass="ui-button-danger float-right"
                     onclick="if (!confirm('Are you sure you want to delete this allergy?'))
-                        return false;"
+                                return false;"
                     process="@this"
                     update="tblAllergies"
-                    action="#{patientEncounterController.removePatientAllergyForComposite(cc.attrs.allergies, allergy)}">
-                    <i class="pi pi-times" />
-                </p:commandLink>
+                    action="#{patientEncounterController.removeClinicalFindingValueForComposite(cc.attrs.allergies, allergy) }">
+                </p:commandButton>
             </p:column>
         </p:dataTable>
+
 
     </cc:implementation>
 </html>
