--- a/src/main/webapp/resources/ezcomp/emr/patient_medicines.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/patient_medicines.xhtml
@@ -8,47 +8,28 @@
 
     <!-- INTERFACE -->
     <cc:interface>
-       
-        <cc:attribute 
-            name="medicines"   />
-
+        <cc:attribute name="medicines" />
+        <cc:attribute name="editable" type="boolean" default="false" />
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-
         <p:dataTable
             id="tblRxx"
             value="#{cc.attrs.medicines}"
             var="rx">
-            <p:column headerText="Medicine">
-                <p:outputLabel value="#{rx.prescription.item.name}">
+            <p:column headerText="Medications">
+                <p:outputLabel value="#{rx.prescription.formattedPrescription}">
                 </p:outputLabel>
-                <p:spacer height="1" width="5" ></p:spacer>
-                <p:commandLink value="X" class="text-danger" 
-                               id="btnDeleteRx"
-                               process="btnDeleteRx"
-                               update="tblRxx"
-                               onclick="if (!confirm('Are you sure you want to delete this allergy?'))
-                                           return false;"
-                               action="#{patientEncounterController.removePatientDiagnosis()}"
-                               >
-                    <f:setPropertyActionListener target="#{patientEncounterController.removingClinicalFindingValue}" value="#{rx}"/>
-                </p:commandLink>
-                <p:tooltip value="Delete" for="btnDeleteRx" ></p:tooltip>
-            </p:column>
-            <p:column headerText="Dose">
-                <h:outputText value="#{rx.prescription.dose}"/>
-                <h:outputText value="#{rx.prescription.doseUnit.name}"/>
-            </p:column>
-            <p:column headerText="Frequency">
-                <h:outputText value="#{rx.prescription.frequencyUnit.name}"/>
-            </p:column>
-            <p:column headerText="Duration">
-                <h:outputText value="#{rx.prescription.duration}"/>
-                <h:outputText value="#{rx.prescription.durationUnit.name}"/>
+                <p:spacer height="1" width="20" ></p:spacer>
+                <p:commandButton rendered="#{cc.attrs.editable}" icon="pi pi-times" 
+                                 styleClass="ui-button-danger float-right" 
+                                 process="@this" update="tblRxx"
+                                 onclick="if (!confirm('Are you sure you want to delete this prescription?'))
+                                             return false;"
+                                 action="#{patientEncounterController.removeClinicalFindingValueForComposite(cc.attrs.medicines, rx)}">
+                </p:commandButton>
             </p:column>
         </p:dataTable>
-
     </cc:implementation>
 </html>
