closes#1761 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/inward/inward_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim.xhtml
@@ -24,7 +24,7 @@
                     <p:panel rendered="#{bhtSummeryController.patientEncounter eq null}">
                         <f:facet name="header">
                             <h:outputText styleClass="fas fa-arrow-down" />
-                            <p:outputLabel value="Inward Payment Bill"/>
+                            <p:outputLabel value="Inward Payment Bill" class="mx-2"/>
                         </f:facet>
 
                         <h:panelGrid columns="10">
